--- a/MetodoAsignacion/src/Interfaz/FRPrincipal.form
+++ b/MetodoAsignacion/src/Interfaz/FRPrincipal.form
@@ -1,6 +1,6 @@
 <?xml version="1.1" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="title" type="java.lang.String" value="M&#xe9;todo de Asignaci&#xf3;n"/>
@@ -47,11 +47,6 @@
               <Component id="pnlHeader" alignment="0" max="32767" attributes="0"/>
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="lblInfoIngresar" min="-2" pref="462" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-              </Group>
-              <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace max="-2" attributes="0"/>
                   <Component id="pnlSolucion" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -59,6 +54,11 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="scrTablaCostos" pref="605" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
+              </Group>
+              <Group type="102" alignment="0" attributes="0">
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Component id="lblInfoIngresar" min="-2" pref="536" max="-2" attributes="0"/>
+                  <EmptySpace pref="79" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -261,7 +261,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="MS Reference Sans Serif" size="12" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Ingrese el costo correspondiente a cada celda."/>
+            <Property name="text" type="java.lang.String" value="Ingrese el costo correspondiente a cada celda seguido del boton &quot;Enter&quot;."/>
           </Properties>
         </Component>
         <Container class="javax.swing.JPanel" name="pnlSolucion">
